--- a/_config.yml
+++ b/_config.yml
@@ -29,9 +29,12 @@ url: "https://sindhu4512.github.io" # the base hostname & protocol for your site
 
 
 # Build settings
+markdown: kramdown
 theme: minima
 plugins:
   - jekyll-feed
+
+include: ['_pages']
 
 # Exclude from processing.
 # The following items will not be processed, by default.
